[tool.poetry]
name = "sphinx-demo"
version = "0.1.0"
description = ""
authors = ["Fizban <jackmckew2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^2.3.1"
rst2pdf = "^0.96"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
